Attempt fix header overlap image

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -57,6 +57,7 @@ header nav a {
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
+    padding-top: 69px;
 }
 
 #mission-statement {
